--- a/FRONTEND/styles.less
+++ b/FRONTEND/styles.less
@@ -1,4 +1,4 @@
-input.controleInput {
+input.controleInput{
   outline:0;
   font-size:14px;
   width:250px;
@@ -10,4 +10,11 @@ input.controleInput:valid {
 
 input.controleInput:invalid {
   border:3px solid #a00;
+}
+
+input.passwordInput{
+  border:3px solid #F93;
+  outline:0;
+  font-size:14px;
+  width:250px;
 }
